@@ -35,6 +35,7 @@ netdiscovery/netinventory:
 * Add Panasas PanFS support
 * Add few HP/Compaq serialnumber cases support
 * Fix #605: try 'ip neighbor show' if 'arp' is not available for netdiscovery
+* Set a default hostname, eventually based on serialnumber, when none found
 
 2.4.2 Wed, 03 Oct 2018
 
